--- a/lib/assets/uikits/cm-contract/_cm-contract.scss
+++ b/lib/assets/uikits/cm-contract/_cm-contract.scss
@@ -56,6 +56,10 @@
                         line-height: 35px;
                     }
                 }
+
+                a.nav-link .active {
+                    color: $brand-primary;
+                }
             }
         }
     }
