nav link active

--- a/lib/assets/uikits/cm-contract/_cm-contract.scss
+++ b/lib/assets/uikits/cm-contract/_cm-contract.scss
@@ -58,7 +58,7 @@
                 }
 
                 a.nav-link .active {
-                    color: $brand-primary;
+                    font-weight: 900;
                 }
             }
         }
