--- a/lib/assets/uikits/cm-contract/_cm-contract.scss
+++ b/lib/assets/uikits/cm-contract/_cm-contract.scss
@@ -57,7 +57,7 @@
                     }
                 }
 
-                a.nav-link .active {
+                a.active {
                     font-weight: 900;
                 }
             }
