--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -9151,6 +9151,10 @@ ul.leaders span + span {
           line-height: 35px; } }
       .cm-contract nav ul.nav li.nav-item a.active, .cm-contract nav body:not(.top-nav) .sidebar ul.nav li.nav-item a.nav-link.router-link-active, body:not(.top-nav) .sidebar .cm-contract nav ul.nav li.nav-item a.nav-link.router-link-active {
         font-weight: 900; }
+      .cm-contract nav ul.nav li.nav-item a.active:after, .cm-contract nav body:not(.top-nav) .sidebar ul.nav li.nav-item a.nav-link.router-link-active:after, body:not(.top-nav) .sidebar .cm-contract nav ul.nav li.nav-item a.nav-link.router-link-active:after {
+        content: "  \f100";
+        font-family: FontAwesome;
+        font-weight: 900; }
   @media (max-width: 1199px) {
     .cm-contract nav {
       width: 170px;
