--- a/lib/assets/uikits/cm-contract/_cm-contract.scss
+++ b/lib/assets/uikits/cm-contract/_cm-contract.scss
@@ -60,6 +60,11 @@
                 a.active {
                     font-weight: 900;
                 }
+
+                a.active:after {
+                    content: "  \f100";
+                    font-family: FontAwesome;
+                }
             }
         }
     }
