--- a/lib/assets/uikits/cm-contract/_cm-contract.scss
+++ b/lib/assets/uikits/cm-contract/_cm-contract.scss
@@ -64,6 +64,7 @@
                 a.active:after {
                     content: "  \f100";
                     font-family: FontAwesome;
+                    font-size: 14px;
                 }
             }
         }
