--- a/lib/assets/uikits/cm-contract/_cm-contract.scss
+++ b/lib/assets/uikits/cm-contract/_cm-contract.scss
@@ -5,7 +5,7 @@
 
     nav {
         width: 240px;
-        padding: 15px;
+        padding: 15px 0 15px 15px;
 
         .btn-block {
             margin-bottom: 15px;
