CMAS-52 Выполнить доработки Frontend'a для реализации функционала просмотра карточки договора

--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -9281,5 +9281,7 @@ ul.leaders span + span {
               font-size: 14px;
               margin: -2px 0px 0px 5px;
               color: #d1d4d7; }
+    .cm-contract main ul.leaders li {
+      padding: 0.2em 0; }
 
 /*# sourceMappingURL=style.css.map */
