--- a/lib/assets/uikits/cm-contract/_cm-contract.scss
+++ b/lib/assets/uikits/cm-contract/_cm-contract.scss
@@ -189,8 +189,6 @@
         }
 
         .message {
-
-
             .message-title {
                 margin-top: 30px;
                 padding-top: 10px;
@@ -273,6 +271,10 @@
                     }
                 }
             }
+        }
+
+        ul.leaders li {
+            padding: 0.2em 0;
         }
     }
 }
