--- a/lib/assets/uikits/cm-contract/_cm-contract.scss
+++ b/lib/assets/uikits/cm-contract/_cm-contract.scss
@@ -59,7 +59,7 @@
 
                 a.active {
                     font-weight: 900;
-                    cursor: text;
+                    cursor: default;
                 }
 
                 a.active:after {
