CMAS-82 Создать компонент, сверстать форму создания работы

--- a/lib/assets/_bootstrap-variables.scss
+++ b/lib/assets/_bootstrap-variables.scss
@@ -98,3 +98,7 @@ $progress-bg:                   $gray-lightest;
 
 $table-bg-accent:               $gray-lightest;
 $table-bg-hover:                $gray-silver;
+
+$btn-light-color:            rgba(0, 0, 0, 0.65) !default;
+$btn-light-bg:               #fff !default;
+$btn-light-border:           rgba(0, 0, 0, 0.15) !default;
