--- a/lib/assets/bootstrap_custom/_input-group.scss
+++ b/lib/assets/bootstrap_custom/_input-group.scss
@@ -5,6 +5,12 @@
     vertical-align: middle; // Match the inputs
 }
 
+.input-group-addon-light {
+    background-color: #fff;
+    border-color: rgba(0, 0, 0, 0.15);
+    color: rgba(0, 0, 0, 0.65);
+}
+
 @include media-breakpoint-down(lg) {
     .input-group-addon {
         padding-top: 0;
