--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -2713,6 +2713,9 @@ tbody.collapse.in {
   vertical-align: middle; }
 
 .input-group-addon-light {
+  min-width: 40px;
+  white-space: nowrap;
+  vertical-align: middle;
   background-color: #fff;
   border-color: rgba(0, 0, 0, 0.15);
   color: rgba(0, 0, 0, 0.65); }
