--- a/lib/assets/bootstrap_custom/_input-group.scss
+++ b/lib/assets/bootstrap_custom/_input-group.scss
@@ -6,17 +6,13 @@
 }
 
 .input-group-addon-light {
-    min-width: 40px;
-    white-space: nowrap;
-    vertical-align: middle; // Match the inputs
-
     background-color: #fff;
     border-color: rgba(0, 0, 0, 0.15);
     color: rgba(0, 0, 0, 0.65);
 }
 
 @include media-breakpoint-down(lg) {
-    .input-group-addon {
+    .input-group-addon, .input-group-addon-light {
         padding-top: 0;
         padding-bottom: 0;
         min-width: 35px;
