--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -8170,7 +8170,10 @@ footer.footer {
 .btn-light {
   color: rgba(0, 0, 0, 0.65);
   background-color: #fff;
-  border-color: rgba(0, 0, 0, 0.15); }
+  border-color: rgba(0, 0, 0, 0.15);
+  line-height: 1.4;
+  padding-left: 0.65rem;
+  padding-right: 0.65rem; }
   .btn-light:hover {
     color: rgba(0, 0, 0, 0.65);
     background-color: #e6e6e6;
