--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -8173,7 +8173,8 @@ footer.footer {
   border-color: rgba(0, 0, 0, 0.15);
   line-height: 1.4;
   padding-left: 0.65rem;
-  padding-right: 0.65rem; }
+  padding-right: 0.65rem;
+  border-color: 1px solid rgba(0, 0, 0, 0.15); }
   .btn-light:hover {
     color: rgba(0, 0, 0, 0.65);
     background-color: #e6e6e6;
