--- a/lib/assets/bootstrap_custom/_input-group.scss
+++ b/lib/assets/bootstrap_custom/_input-group.scss
@@ -19,3 +19,13 @@
         font-size: 0.675rem;
     }
 }
+
+.input-group-btn {
+    // Negative margin to only have a single, shared border between the two
+    &:not(:last-child) {
+        > .btn,
+        > .btn-group {
+            margin-right: (-$input-btn-border-width - 1);
+        }
+    }
+}
