--- a/lib/assets/_custom.scss
+++ b/lib/assets/_custom.scss
@@ -173,7 +173,24 @@ ul.leaders span + span {
 
 /** /PRELOADER **/
 
+/** BIG PLUS-MINUS **/
+
 .cm-plus, .cm-minus {
-  line-height: 2.3;
-  cursor: pointer;
+  border-color: rgba(0, 0, 0, 0.15);
 }
+
+.cm-plus span {
+  position: relative;
+}
+
+.cm-plus span:before {
+  content: "—";
+  position: absolute;
+  top: 0.05rem;
+  left: 0.1rem;
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+/** BIG PLUS-MINUS **/
