--- a/lib/assets/_custom.scss
+++ b/lib/assets/_custom.scss
@@ -175,7 +175,7 @@ ul.leaders span + span {
 
 /** BIG PLUS-MINUS **/
 
-.cm-plus, .cm-minus {
+.cm-plus, .cm-minus, .cm-plus:hover, .cm-minus:hover, .cm-plus:active, .cm-minus:active {
   border-color: rgba(0, 0, 0, 0.15);
 }
 
