--- a/lib/assets/_custom.scss
+++ b/lib/assets/_custom.scss
@@ -179,6 +179,14 @@ ul.leaders span + span {
   border-color: rgba(0, 0, 0, 0.15);
 }
 
+.cm-minus:hover, .cm-minus:active {
+  background-color: #ff5454;
+}
+
+.cm-plus:hover, .cm-plus:active {
+  background-color: #79c447;
+}
+
 .cm-plus span {
   position: relative;
 }
