CMAS-82 Создать компонент, сверстать форму создания работы

--- a/lib/assets/_custom.scss
+++ b/lib/assets/_custom.scss
@@ -180,11 +180,11 @@ ul.leaders span + span {
 }
 
 .cm-minus:hover, .cm-minus:active {
-  background-color: #ff5454;
+  background-color: #a8d988;
 }
 
 .cm-plus:hover, .cm-plus:active {
-  background-color: #79c447;
+  background-color: #ff9090;
 }
 
 .cm-plus span {
