--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -9165,10 +9165,10 @@ ul.leaders span + span {
   border-color: rgba(0, 0, 0, 0.15); }
 
 .cm-minus:hover, .cm-minus:active {
-  background-color: #ff5454; }
+  background-color: #a8d988; }
 
 .cm-plus:hover, .cm-plus:active {
-  background-color: #79c447; }
+  background-color: #ff9090; }
 
 .cm-plus span {
   position: relative; }
