--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -9161,7 +9161,11 @@ ul.leaders span + span {
 
 /** /PRELOADER **/
 /** BIG PLUS-MINUS **/
-.cm-plus, .cm-minus, .cm-plus:hover, .cm-minus:hover, .cm-plus:active, .cm-minus:active {
+.cm-plus, .cm-minus,
+.cm-plus:hover,
+.cm-minus:hover,
+.cm-plus:active, .cm-minus:active,
+.cm-plus:hover:active, .cm-minus:hover:active {
   border-color: rgba(0, 0, 0, 0.15); }
 
 .cm-minus:hover, .cm-minus:active {
