--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -8214,6 +8214,8 @@ footer.footer {
     background-color: #fff; }
     .btn-light-disabled:hover:active {
       background-color: #fff; }
+  .btn-light-disabled:active {
+    background-color: #fff; }
 
 hr.transparent {
   border-top: 1px solid transparent; }
