--- a/lib/assets/_custom.scss
+++ b/lib/assets/_custom.scss
@@ -206,3 +206,9 @@ ul.leaders span + span {
 }
 
 /** BIG PLUS-MINUS **/
+
+/** CURSORS **/
+.cursor-pointer {
+  cursor: pointer;
+}
+/** /CURSORS **/
