--- a/lib/assets/bootstrap_custom/_input-group.scss
+++ b/lib/assets/bootstrap_custom/_input-group.scss
@@ -1,6 +1,6 @@
 .input-group-addon,
 .input-group-btn {
-    min-width: 40px;
+    /*min-width: 40px;*/
     white-space: nowrap;
     vertical-align: middle; // Match the inputs
 }
@@ -25,7 +25,7 @@
     &:not(:last-child) {
         > .btn,
         > .btn-group {
-            margin-right: (-$input-btn-border-width - 1);
+            margin-right: (-$input-btn-border-width);
         }
     }
 }
