input group fix

--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -2718,6 +2718,9 @@ tbody.collapse.in {
   white-space: nowrap;
   vertical-align: middle; }
 
+.input-group {
+  border-collapse: collapse; }
+
 .input-group-addon-light {
   background-color: #fff;
   border-color: rgba(0, 0, 0, 0.15);
