--- a/lib/assets/bootstrap_custom/_input-group.scss
+++ b/lib/assets/bootstrap_custom/_input-group.scss
@@ -5,6 +5,10 @@
     vertical-align: middle; // Match the inputs
 }
 
+.input-group {
+    border-collapse: collapse;
+}
+
 .input-group-addon-light {
     background-color: #fff;
     border-color: rgba(0, 0, 0, 0.15);
