--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -2714,6 +2714,7 @@ tbody.collapse.in {
 
 .input-group-addon,
 .input-group-btn {
+  min-width: 40px;
   white-space: nowrap;
   vertical-align: middle; }
 
