input group fix

--- a/lib/assets/bootstrap_custom/_input-group.scss
+++ b/lib/assets/bootstrap_custom/_input-group.scss
@@ -5,9 +5,9 @@
     vertical-align: middle; // Match the inputs
 }
 
-.input-group {
+/*.input-group {
     border-collapse: collapse;
-}
+}*/
 
 .input-group-addon-light {
     background-color: #fff;
