--- a/lib/assets/core/_buttons.scss
+++ b/lib/assets/core/_buttons.scss
@@ -607,3 +607,29 @@
         outline: 0;
     }
 }
+
+.btn-tiny {
+    @include button-variant($btn-light-color, $btn-light-bg, $btn-light-border);
+    padding-left: 0.65rem;
+    padding-right: 0.65rem;
+    border: none;
+    background-color: transparent;
+    color: $gray-dark;
+
+    &:hover {
+        outline: 0;
+
+        &:active {
+            background-color: transparent;
+            outline: 0;
+        }
+    }
+
+    &:active {
+        outline: 0;
+    }
+
+    &:focus {
+        outline: 0;
+    }
+}
