compact-nav css fix

--- a/lib/assets/core/navigation/_sidebar.scss
+++ b/lib/assets/core/navigation/_sidebar.scss
@@ -295,6 +295,7 @@ body:not(.top-nav) {
             }
 
             ul.nav {
+                width: $sidebar-compact-width;
 
                 li.nav-title, li.divider {
                     display: none;
