--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -1690,7 +1690,7 @@ pre {
     cursor: not-allowed; }
 
 select.form-control:not([size]):not([multiple]) {
-  height: calc(2.3125rem - 2px); }
+  height: calc(2.3125rem + 2px); }
 select.form-control:focus::-ms-value {
   color: #55595c;
   background-color: #fff; }
