--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -6033,6 +6033,9 @@ body {
   body {
     font-size: 0.675rem;
     line-height: 1.05rem; } }
+.font-xxs {
+  font-size: .5rem !important; }
+
 .font-xs {
   font-size: .75rem !important; }
 
@@ -6058,6 +6061,9 @@ body {
   font-size: 2.5rem !important; }
 
 @media (max-width: 1199px) {
+  .font-xxs {
+    font-size: 0.35rem !important; }
+
   .font-xs {
     font-size: 0.525rem !important; }
 
