--- a/lib/assets/uikits/cm-rates/_cm-rates.scss
+++ b/lib/assets/uikits/cm-rates/_cm-rates.scss
@@ -47,6 +47,11 @@
         overflow: hidden
     }
 
+    .rate_name_long {
+        white-space: nowrap;
+        overflow: visible
+    }
+
     .rate_total_caption {
         overflow: hidden;
         white-space: nowrap
