--- a/lib/assets/uikits/cm-rates/_cm-rates.scss
+++ b/lib/assets/uikits/cm-rates/_cm-rates.scss
@@ -15,6 +15,7 @@
 
     .rate_caption table tr td {
         cursor: default;
+        background-color: #fff;
     }
 
     .rate .row:last-child table tr td {
