background last td

--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -9457,12 +9457,12 @@ ul.leaders span + span {
   text-align: center;
   vertical-align: middle;
   padding: 0;
-  cursor: pointer; }
+  cursor: pointer;
+  background-color: #fff; }
 .cm-rates .rate table tr td:hover {
   background-color: #eee; }
 .cm-rates .rate_caption table tr td {
-  cursor: default;
-  background-color: #fff; }
+  cursor: default; }
 .cm-rates .rate .row:last-child table tr td {
   border-bottom: none; }
 .cm-rates .rate:last-child table tr td:first-child {
