--- a/lib/assets/uikits/cm-rates/_cm-rates.scss
+++ b/lib/assets/uikits/cm-rates/_cm-rates.scss
@@ -13,6 +13,10 @@
         background-color: #eee;
     }
 
+    .rate_caption tr td {
+        pointer-events: none;
+    }
+
     .rate_caption table tr td {
         cursor: default;
     }
