--- a/lib/assets/uikits/cm-rates/_cm-rates.scss
+++ b/lib/assets/uikits/cm-rates/_cm-rates.scss
@@ -13,7 +13,7 @@
         background-color: #eee;
     }
 
-    .rate_caption tr td {
+    .rate_caption tr td, .total_column {
         pointer-events: none;
     }
 
