--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -9460,6 +9460,8 @@ ul.leaders span + span {
   cursor: pointer; }
 .cm-rates .rate table tr td:hover {
   background-color: #eee; }
+.cm-rates .rate .no-events {
+  pointer-events: none; }
 .cm-rates .rate_caption tr td, .cm-rates .total_column {
   pointer-events: none; }
 .cm-rates .rate_caption table tr td {
