--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -5832,7 +5832,7 @@ import "select2/select2";
   -webkit-text-shadow: 0 1px 0 #ffffff;
   text-shadow: 0 1px 0 #ffffff;
   opacity: 0.8;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
   filter: alpha(opacity=80); }
 
 .toast-close-button:hover,
@@ -5841,7 +5841,7 @@ import "select2/select2";
   text-decoration: none;
   cursor: pointer;
   opacity: 0.4;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
   filter: alpha(opacity=40); }
 
 /*Additional properties for button version
@@ -5910,12 +5910,12 @@ button.toast-close-button {
   background-repeat: no-repeat;
   color: #ffffff;
   opacity: 0.9;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
   filter: alpha(opacity=90); }
 
 #toast-container .toast:hover {
   opacity: 1;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
   filter: alpha(opacity=100);
   cursor: pointer; }
 
@@ -5975,7 +5975,7 @@ progress-bar,
   height: 4px;
   background-color: #000000;
   opacity: .2;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
   filter: alpha(opacity=20); }
 
 /*Animations*/
