angular2 upgrade (3.0.0) - fixes remove carousel

--- a/lib/assets/style.scss
+++ b/lib/assets/style.scss
@@ -55,7 +55,7 @@
 @import "../src/bower_components/bootstrap/scss/modal";
 @import "../src/bower_components/bootstrap/scss/tooltip";
 @import "../src/bower_components/bootstrap/scss/popover";
-@import "../src/bower_components/bootstrap/scss/carousel";
+//@import "../src/bower_components/bootstrap/scss/carousel";
 
 // Utility classes
 @import "../src/bower_components/bootstrap/scss/utilities";
