--- a/lib/assets/style.css
+++ b/lib/assets/style.css
@@ -9293,7 +9293,7 @@ ul.leaders span + span {
   text-align: center;
   vertical-align: middle;
   padding: 0; }
-.cm-rates .rate table tr td:hover {
+.cm-rates .rate table.cell-hover tr td:hover {
   background-color: #eee; }
 .cm-rates .rate .no-events {
   pointer-events: none; }
