--- a/lib/assets/uikits/cm-rates/_cm-rates.scss
+++ b/lib/assets/uikits/cm-rates/_cm-rates.scss
@@ -8,7 +8,7 @@
         padding: 0;
     }
 
-    .rate table tr td:hover {
+    .rate table.cell-hover tr td:hover {
         background-color: #eee;
     }
 
